--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "55      1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "4                               Gemini 12, Apollo 11        NaT           NaN  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -470,67 +470,67 @@
      "output_type": "stream",
      "text": [
       "The most popular undergraduate major among astronauts is Physics\n",
-      "Physics                                             35\n",
-      "Aerospace Engineering                               33\n",
-      "Mechanical Engineering                              30\n",
-      "Aeronautical Engineering                            28\n",
-      "Electrical Engineering                              23\n",
-      "Engineering Science                                 13\n",
-      "Engineering                                         12\n",
-      "Mathematics                                         11\n",
-      "Chemistry                                           10\n",
-      "Naval Sciences                                       9\n",
-      "Chemical Engineering                                 9\n",
-      "Astronautical Engineering                            8\n",
-      "Aeronautical & Astronautical Engineering             6\n",
-      "Mathematics & Physics                                5\n",
-      "Geology                                              5\n",
-      "Biology                                              5\n",
-      "Civil Engineering                                    5\n",
-      "Physics & Astronomy                                  4\n",
-      "Applied Science & Engineering                        4\n",
-      "Computer Science                                     3\n",
-      "Engineering Physics                                  3\n",
-      "Applied Mathematics                                  3\n",
-      "Aeronautics & Astronautics                           3\n",
-      "Engineering Management                               2\n",
-      "Education                                            2\n",
-      "Chemistry & Biology                                  2\n",
-      "Ocean Engineering                                    2\n",
-      "Physics & Mathematics                                2\n",
-      "Zoology                                              2\n",
-      "Engineering Mechanics                                2\n",
-      "                                                    ..\n",
-      "Industrial Management                                1\n",
-      "Physical Science                                     1\n",
-      "Mathematical & Electrical Science                    1\n",
-      "Military Science                                     1\n",
-      "Animal Science                                       1\n",
-      "Engineering Sciences; Astronautics & Mathematics     1\n",
-      "Earth & Planetary Science                            1\n",
-      "Nuclear Engineering                                  1\n",
-      "Space Physics                                        1\n",
-      "Mathematics & Statistics; Chemistry                  1\n",
-      "Animal Nutrition                                     1\n",
-      "Economics                                            1\n",
-      "Industrial Engineering                               1\n",
-      "Physics & Engineering                                1\n",
-      "Human Biology                                        1\n",
-      "Astronomy                                            1\n",
-      "Business Economics                                   1\n",
-      "Astronautics                                         1\n",
-      "Biology & Psychology                                 1\n",
-      "Molecular Biology                                    1\n",
-      "Mechanical & Aeronautical Engineering                1\n",
-      "Business Management; Aeronautical Engineering        1\n",
-      "Metallurgical Engineering                            1\n",
-      "Solid Earth Sciences                                 1\n",
-      "Physiology                                           1\n",
-      "Earth Sciences                                       1\n",
-      "Mathematics; Russian                                 1\n",
-      "Physics & Astronautical Engineering                  1\n",
-      "Chemistry; Physiological Optics                      1\n",
-      "Electrical Engineering; Computer Science             1\n",
+      "Physics                                                                35\n",
+      "Aerospace Engineering                                                  33\n",
+      "Mechanical Engineering                                                 30\n",
+      "Aeronautical Engineering                                               28\n",
+      "Electrical Engineering                                                 23\n",
+      "Engineering Science                                                    13\n",
+      "Engineering                                                            12\n",
+      "Mathematics                                                            11\n",
+      "Chemistry                                                              10\n",
+      "Chemical Engineering                                                    9\n",
+      "Naval Sciences                                                          9\n",
+      "Astronautical Engineering                                               8\n",
+      "Aeronautical & Astronautical Engineering                                6\n",
+      "Civil Engineering                                                       5\n",
+      "Geology                                                                 5\n",
+      "Mathematics & Physics                                                   5\n",
+      "Biology                                                                 5\n",
+      "Physics & Astronomy                                                     4\n",
+      "Applied Science & Engineering                                           4\n",
+      "Applied Mathematics                                                     3\n",
+      "Computer Science                                                        3\n",
+      "Engineering Physics                                                     3\n",
+      "Aeronautics & Astronautics                                              3\n",
+      "Biological Science                                                      2\n",
+      "Chemistry & Biology                                                     2\n",
+      "Engineering Management                                                  2\n",
+      "Education                                                               2\n",
+      "Engineering Mechanics                                                   2\n",
+      "Zoology                                                                 2\n",
+      "Ocean Engineering                                                       2\n",
+      "                                                                       ..\n",
+      "Electrical Engineering; Computer Science                                1\n",
+      "Physics & Engineering                                                   1\n",
+      "Nuclear Engineering                                                     1\n",
+      "Electronics Engineering                                                 1\n",
+      "Business Management; Aeronautical Engineering                           1\n",
+      "Ecological Science                                                      1\n",
+      "Solid Earth Sciences                                                    1\n",
+      "Chemistry; Physiological Optics                                         1\n",
+      "Mathematics; Russian                                                    1\n",
+      "Physics & Mechanical Engineering                                        1\n",
+      "Aeronautics & Astronautics; Earth, Atmospheric & Planetary Sciences     1\n",
+      "Mathematics & Statistics; Chemistry                                     1\n",
+      "Computer & Systems Engineering                                          1\n",
+      "Applied Biology; Mechanical Engineering                                 1\n",
+      "Military Engineering                                                    1\n",
+      "Earth Sciences                                                          1\n",
+      "Physics; English                                                        1\n",
+      "Industrial Engineering                                                  1\n",
+      "Animal Science                                                          1\n",
+      "Biology & Psychology                                                    1\n",
+      "Physical Science                                                        1\n",
+      "Systems Engineering                                                     1\n",
+      "Industrial Management                                                   1\n",
+      "Economics                                                               1\n",
+      "Bioscience                                                              1\n",
+      "Engineering Sciences; Astronautics & Mathematics                        1\n",
+      "Human Biology                                                           1\n",
+      "Metallurgical Engineering                                               1\n",
+      "Mathematical & Electrical Science                                       1\n",
+      "Accounting                                                              1\n",
       "Name: Undergraduate Major, Length: 83, dtype: int64\n"
      ]
     }
@@ -555,13 +555,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
     "\n",
-    "astronaut = astronaut.to_csv('astronaut.csv', sep = \",\", index = False)\n",
+    "astronaut = astronaut.to_csv('astronaut.csv', sep = \"\\t\", index = False)\n",
     "\n"
    ]
   },
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
        "4            0                  0.8       -1                 0.50      O  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
