--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -491,13 +491,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
     "\n",
-    "astronaut.to_csv('astronaut.csv', index=False)\n"
+    "astronaut.to_csv('astronaut.csv',sep='\\t', index=False)\n"
    ]
   },
   {
