reviewed last question

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -449,27 +449,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Elliot M. See Jr.       1\n",
-       "Thomas D. Jones         1\n",
-       "Frederick H. Hauck      1\n",
-       "Peter J. K. Wisoff      1\n",
-       "Richard J. Hieb         1\n",
-       "                       ..\n",
-       "David C. Hilmers        1\n",
-       "Gregory E. Chamitoff    1\n",
-       "Taylor G. Wang          1\n",
-       "Michael P. Anderson     1\n",
-       "Charles Lacy Veach      1\n",
-       "Name: Name, Length: 357, dtype: int64"
+       "Physics                                    35\n",
+       "Aerospace Engineering                      33\n",
+       "Mechanical Engineering                     30\n",
+       "Aeronautical Engineering                   28\n",
+       "Electrical Engineering                     23\n",
+       "                                           ..\n",
+       "Bioscience                                  1\n",
+       "Applied Biology; Mechanical Engineering     1\n",
+       "Marine Engineering & Nautical Science       1\n",
+       "Physiology                                  1\n",
+       "Solid Earth Sciences                        1\n",
+       "Name: Undergraduate Major, Length: 83, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
     "\n",
     "# sort = True in descending order\n",
     "\n",
-    "astronaut['Name'].value_counts(sort = True)"
+    "astronaut['Undergraduate Major'].value_counts(sort = True)"
    ]
   },
   {
