--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -22,8 +22,7 @@
    "outputs": [],
    "source": [
     "#Your pandas import here:\n",
-    "import pandas as pd\n",
-    "\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +172,7 @@
        "55      1  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +429,7 @@
        "4                               Gemini 12, Apollo 11        NaT           NaN  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,27 +448,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Physics                                    35\n",
-       "Aerospace Engineering                      33\n",
-       "Mechanical Engineering                     30\n",
-       "Aeronautical Engineering                   28\n",
-       "Electrical Engineering                     23\n",
-       "                                           ..\n",
-       "Bioscience                                  1\n",
-       "Applied Biology; Mechanical Engineering     1\n",
-       "Marine Engineering & Nautical Science       1\n",
-       "Physiology                                  1\n",
-       "Solid Earth Sciences                        1\n",
+       "Physics                                35\n",
+       "Aerospace Engineering                  33\n",
+       "Mechanical Engineering                 30\n",
+       "Aeronautical Engineering               28\n",
+       "Electrical Engineering                 23\n",
+       "                                       ..\n",
+       "Psychology                              1\n",
+       "Physics & Astronautical Engineering     1\n",
+       "Military Science                        1\n",
+       "Astronautics                            1\n",
+       "Bioscience                              1\n",
        "Name: Undergraduate Major, Length: 83, dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +476,7 @@
    "source": [
     "# Your code here:\n",
     "\n",
-    "# sort = True in descending order\n",
+    "# sort = True organizes data in descending order\n",
     "\n",
     "astronaut['Undergraduate Major'].value_counts(sort = True)"
    ]
@@ -491,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -652,13 +651,22 @@
        "4             -1                                   0.50      O  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fertility.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_fertility = fertility.to_csv('fertility.csv',sep='\\t', index=False)"
    ]
   },
   {
