--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -22,7 +22,9 @@
    "outputs": [],
    "source": [
     "#Your pandas import here:\n",
-    "\n"
+    "\n",
+    "import pandas as pd\n",
+    "#thjis is a comment\n"
    ]
   },
   {
@@ -189,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
