--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -453,18 +453,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Series([], Name: Undergraduate Major, dtype: float64)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Physics'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "astronaut['Undergraduate Major'].value_counts().idxmax()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -475,12 +480,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "pd.DataFrame.to_csv(astronaut, 'astronaut.csv', index = False)"
    ]
   },
   {
@@ -494,13 +498,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Childish diseases</th>\n",
+       "      <th>Accident/Trauma</th>\n",
+       "      <th>Surgical intervention</th>\n",
+       "      <th>High fevers in the last year</th>\n",
+       "      <th>Frequency of alcohol consumption</th>\n",
+       "      <th>Smoking habit</th>\n",
+       "      <th>Hours sitted during the day</th>\n",
+       "      <th>Diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Season   Age  Childish diseases  Accident/Trauma  Surgical intervention  \\\n",
+       "0   -0.33  0.69                  0                1                      1   \n",
+       "1   -0.33  0.94                  1                0                      1   \n",
+       "2   -0.33  0.50                  1                0                      0   \n",
+       "3   -0.33  0.75                  0                1                      1   \n",
+       "4   -0.33  0.67                  1                1                      0   \n",
+       "\n",
+       "   High fevers in the last year  Frequency of alcohol consumption  \\\n",
+       "0                             0                               0.8   \n",
+       "1                             0                               0.8   \n",
+       "2                             0                               1.0   \n",
+       "3                             0                               1.0   \n",
+       "4                             0                               0.8   \n",
+       "\n",
+       "   Smoking habit  Hours sitted during the day Diagnosis  \n",
+       "0              0                         0.88         N  \n",
+       "1              1                         0.31         O  \n",
+       "2             -1                         0.50         N  \n",
+       "3             -1                         0.38         N  \n",
+       "4             -1                         0.50         O  "
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/00244/fertility_Diagnosis.txt'\n",
+    "col_names = ['Season', 'Age', 'Childish diseases', 'Accident/Trauma', 'Surgical intervention', 'High fevers in the last year', 'Frequency of alcohol consumption', 'Smoking habit', 'Hours sitted during the day', 'Diagnosis']\n",
+    "fertility = pd.read_csv(url, sep = ',', names = col_names)\n",
+    "fertility.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here:\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
