--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "#Your pandas import here:\n",
-    "\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
