lab now completed without bonus

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -673,12 +673,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "astronaut.to_csv('astronaut.csv', index=False, sep='\\t')"
    ]
   },
   {
