lab now completed plus bonus

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,13 +691,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Childish Diseases</th>\n",
+       "      <th>Accident or serious trauma</th>\n",
+       "      <th>Surgical intervention</th>\n",
+       "      <th>High fevers in the last year</th>\n",
+       "      <th>Frequency of alcohol consumption</th>\n",
+       "      <th>Smoking habit</th>\n",
+       "      <th>Number of hours spent sitting per day</th>\n",
+       "      <th>Output</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>95</td>\n",
+       "      <td>-1.00</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>96</td>\n",
+       "      <td>-1.00</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>97</td>\n",
+       "      <td>-1.00</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>98</td>\n",
+       "      <td>-1.00</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>99</td>\n",
+       "      <td>-1.00</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Season   Age  Childish Diseases  Accident or serious trauma  \\\n",
+       "0    -0.33  0.69                  0                           1   \n",
+       "1    -0.33  0.94                  1                           0   \n",
+       "2    -0.33  0.50                  1                           0   \n",
+       "3    -0.33  0.75                  0                           1   \n",
+       "4    -0.33  0.67                  1                           1   \n",
+       "..     ...   ...                ...                         ...   \n",
+       "95   -1.00  0.67                  1                           0   \n",
+       "96   -1.00  0.61                  1                           0   \n",
+       "97   -1.00  0.67                  1                           1   \n",
+       "98   -1.00  0.64                  1                           0   \n",
+       "99   -1.00  0.69                  0                           1   \n",
+       "\n",
+       "    Surgical intervention  High fevers in the last year  \\\n",
+       "0                       1                             0   \n",
+       "1                       1                             0   \n",
+       "2                       0                             0   \n",
+       "3                       1                             0   \n",
+       "4                       0                             0   \n",
+       "..                    ...                           ...   \n",
+       "95                      0                             0   \n",
+       "96                      0                             0   \n",
+       "97                      1                             0   \n",
+       "98                      1                             0   \n",
+       "99                      1                             0   \n",
+       "\n",
+       "    Frequency of alcohol consumption  Smoking habit  \\\n",
+       "0                                0.8              0   \n",
+       "1                                0.8              1   \n",
+       "2                                1.0             -1   \n",
+       "3                                1.0             -1   \n",
+       "4                                0.8             -1   \n",
+       "..                               ...            ...   \n",
+       "95                               1.0             -1   \n",
+       "96                               0.8              0   \n",
+       "97                               1.0             -1   \n",
+       "98                               1.0              0   \n",
+       "99                               0.6             -1   \n",
+       "\n",
+       "    Number of hours spent sitting per day Output  \n",
+       "0                                    0.88      N  \n",
+       "1                                    0.31      O  \n",
+       "2                                    0.50      N  \n",
+       "3                                    0.38      N  \n",
+       "4                                    0.50      O  \n",
+       "..                                    ...    ...  \n",
+       "95                                   0.50      N  \n",
+       "96                                   0.50      N  \n",
+       "97                                   0.31      N  \n",
+       "98                                   0.19      N  \n",
+       "99                                   0.19      N  \n",
+       "\n",
+       "[100 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cols = [\"Season\", \"Age\", \"Childish Diseases\", \"Accident or serious trauma\", \"Surgical intervention\", \"High fevers in the last year\", \"Frequency of alcohol consumption\", \"Smoking habit\", \"Number of hours spent sitting per day\", \"Output\"]\n",
+    "data1 = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/00244/fertility_Diagnosis.txt\", names=cols)\n",
+    "fertility = pd.DataFrame(data1)\n",
+    "fertility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here:\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
