--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -22,12 +22,13 @@
    "outputs": [],
    "source": [
     "#Your pandas import here:\n",
-    "\n"
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
