--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -537,16 +537,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>season</th>\n",
+       "      <th>age</th>\n",
+       "      <th>child_disiease</th>\n",
+       "      <th>accident</th>\n",
+       "      <th>surgicial_inv</th>\n",
+       "      <th>highfever</th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>smoking</th>\n",
+       "      <th>sitting_hours</th>\n",
+       "      <th>output</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   season   age  child_disiease  accident  surgicial_inv  highfever  alcohol  \\\n",
+       "0   -0.33  0.69               0         1              1          0      0.8   \n",
+       "1   -0.33  0.94               1         0              1          0      0.8   \n",
+       "2   -0.33  0.50               1         0              0          0      1.0   \n",
+       "3   -0.33  0.75               0         1              1          0      1.0   \n",
+       "4   -0.33  0.67               1         1              0          0      0.8   \n",
+       "\n",
+       "   smoking  sitting_hours output  \n",
+       "0        0           0.88      N  \n",
+       "1        1           0.31      O  \n",
+       "2       -1           0.50      N  \n",
+       "3       -1           0.38      N  \n",
+       "4       -1           0.50      O  "
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
     "\n",
+    "#column\n",
+    "#Attribute Information:\n",
     "\n",
-    "path = 'https://archive.ics.uci.edu/ml/machine-learning-databases/00244/fertility_Diagnosis.tst'\n",
-    "fertility = pd.read_csv(tst_url, sep=' ',index_col=0, header=None, names = cols)"
+    "#Season in which the analysis was performed. 1) winter, 2) spring, 3) Summer, 4) fall. (-1, -0.33, 0.33, 1)\n",
+    "\n",
+    "#Age at the time of analysis. 18-36 (0, 1)\n",
+    "\n",
+    "#Childish diseases (ie , chicken pox, measles, mumps, polio) 1) yes, 2) no. (0, 1)\n",
+    "\n",
+    "#Accident or serious trauma 1) yes, 2) no. (0, 1)\n",
+    "\n",
+    "#Surgical intervention 1) yes, 2) no. (0, 1)\n",
+    "\n",
+    "#High fevers in the last year 1) less than three months ago, 2) more than three months ago, 3) no. (-1, 0, 1)\n",
+    "\n",
+    "#Frequency of alcohol consumption 1) several times a day, 2) every day, 3) several times a week, 4) once a week, 5) hardly ever or never (0, 1)\n",
+    "\n",
+    "#Smoking habit 1) never, 2) occasional 3) daily. (-1, 0, 1)\n",
+    "\n",
+    "#Number of hours spent sitting per day ene-16 (0, 1)\n",
+    "\n",
+    "#Output: Diagnosis normal (N), altered (O)\n",
+    "\n",
+    "#cols = ['']\n",
+    "\n",
+    "\n",
+    "colna = ['season', 'age', 'child_disiease', 'accident', 'surgicial_inv','highfever', 'alcohol', 'smoking', 'sitting_hours', 'output' ]\n",
+    "\n",
+    "\n",
+    "path = 'https://archive.ics.uci.edu/ml/machine-learning-databases/00244/fertility_Diagnosis.txt'\n",
+    "fertility = pd.read_csv(path, sep=',', header=None, names = colna)\n",
+    "\n",
+    "fertility.head()\n",
+    "fertility.describe()\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
