--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -483,11 +483,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "astronaut.to_csv(\"austronaut.csv\",index=False)\n",
+    "astronaut.to_csv(\"austronaut.csv\", sep = '\\t',index=False)\n",
     "\n",
     "\n"
    ]
