ready to submit

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -237,18 +237,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run this code:\n",
-    "\n",
-    "# cols = ['time', 'rad_flow', 'fpv_close', 'fpv_open', 'high', 'bypass', 'bpv_close', 'bpv_open', 'class']\n",
-    "# tst_url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.tst'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -693,9 +681,7 @@
    "source": [
     "# Your code here:\n",
     "\n",
-    "astronaut.to_csv('C:\\\\Users\\\\Zoe Mercury\\\\Desktop\\\\Iron\\\\astronaut.csv', sep=\",\", index = False)\n",
-    "\n",
-    "#what would have been different if I separated by space?\n"
+    "astronaut.to_csv('C:\\\\Users\\\\Zoe Mercury\\\\Desktop\\\\Iron\\\\astronaut.csv', sep=\",\", index = False)\n"
    ]
   },
   {
